samples/_failures_safe/1761341667_688574_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b54ee9a.c: In function ‘main’:
./samples/SAFE/__tmp_7b54ee9a.c:152:5: error: expected declaration or statement at end of input
  152 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_7b54ee9a.c:152:5: error: expected declaration or statement at end of input
